--- a/home_page.html
+++ b/home_page.html
@@ -27,7 +27,7 @@
             <li> <a href="">List your property</a></li>
             <li> <a href="">Support</a></li>
             <li> <a href="">trips</a></li>
-            <li> <a href="">Sign in</a></li>
+            <li> <a href="signin.html">Sign in</a></li>
 
         </ul>
     </nav>
