--- a/home_page.html
+++ b/home_page.html
@@ -38,11 +38,12 @@
     </div>
 
     <div class="main-body">
+        <div class="search_box">
+
+        </div>
         <div class="first-flex">
             <div class="items">
-                <div class="left-img"><img
-                        src=""
-                        alt=""></div>
+                <div class="left-img"><img src="" alt=""></div>
                 <div>fsnkjcjdzhfhsk</div>
             </div>
             <div class="items">
@@ -54,6 +55,76 @@
                 <div>fsnkfk</div>
             </div>
         </div>
+
+        <!-- footer started -->
+
+        <footer>
+            <div class="footer_item">
+                <div><img
+                        src="https://a.travel-assets.com/globalcontrols-service/content/f285fb631b0a976202ef57611c7050e9ef5ca51a/images/EG_Wordmark_blue_RGB.svg"
+                        alt=""></div>
+            </div>
+            <div class="footer_item">
+                <div>Company</div>
+                <ul>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Jobs</a></li>
+                    <li><a href="">List your property</a></li>
+                    <li><a href="">Partnerships</a></li>
+                    <li><a href="">Newsroom</a></li>
+                    <li><a href="">Investor Relations</a></li>
+                    <li><a href="">Site Map</a></li>
+                    <li><a href="">Orbitz Rewards</a></li>
+                    <li><a href="">Advertising</a></li>
+                </ul>
+
+            </div>
+            <div class="footer_item">
+                <div>Explore</div>
+                <ul>
+                    <li><a href=""> Hotels in United States</a></li>
+                    <li><a href=""> Vacation Rentals in United States</a></li>
+                    <li><a href=""> Car Rentals in United States</a></li>
+                    <li><a href="">Domestic Flights</a></li>
+                    <li><a href=""> Vacation Packages in United States</a></li>
+                    <li><a href="">Orbitz Reviews</a></li>
+                    <li><a href="">Orbitz Coupons</a></li>
+                    <li><a href="">LGBTQ Travel</a></li>
+                    <li><a href="">Unique Accommodations</a></li>
+                    <li><a href="">Travel Blog</a></li>
+                </ul>
+
+            </div>
+
+            <div class="footer_item">
+                <div>Policies</div>
+                <ul>
+                    <li><a href=""> Privacy Policy</a></li>
+                    <li><a href="">Terms of Use</a></li>
+                    <li><a href=""> Orbitz Rewards Terms</a></li>
+                    <li><a href=""> Do not sell my personal information</a></li>
+                </ul>
+
+            </div>
+
+            <div class="footer_item">
+                <div>Help</div>
+               <ul>
+                <li><a href=""> Support</a></li>
+                <li><a href="">Cancel your hotel or vacation rental <br> booking</a></li>
+                <li><a href="">Cancel your flight</a></li>
+                <li><a href=""> Refund timelines, policies & processes</a></li>
+                <li><a href="">Use an Orbitz Coupon</a></li>
+               </ul>
+            </div>
+
+        </footer>
+        <hr>
+
+        <p class="text_center top_margin small_font">© 2021 Orbitz, LLC, an Expedia Group Company. All rights reserved.</p>
+        <p class="text_center small_font">Orbitz, Orbitz.com, and the Orbitz logo are trademarks or registered trademarks of Orbitz, LLC. CST# 2083930-50.</p>
+
+        <!-- end of main body  -->
     </div>
 </body>
 
