--- a/signup.html
+++ b/signup.html
@@ -29,7 +29,7 @@
 
         .main_container {
             width: 35%;
-            border: 1px solid black;
+            /* border: 1px solid black; */
             margin: auto;
             margin-top: 50px;
 
@@ -41,7 +41,7 @@
         /* sign up container started */
          #signup_container {
             width: 100%;
-            border: 2px solid red;
+            /* border: 2px solid red; */
             display: flex;
             flex-direction: column;
 
