first body flex-box complete

--- a/home_page.html
+++ b/home_page.html
@@ -66,17 +66,14 @@
         </div> -->
    
         <div class="first-flex">
-            <div class="items">
-                <div class="left-img"><img src="" alt=""></div>
-                <div>fsnkjcjdzhfhsk</div>
+            <div class="item1">
+                <div class="left-img"><img src="https://i.ibb.co/D8TzpNn/ORB-Brand-Promise-Travel-As-You-Are-img-B-840x473-20210611.webp" alt=""></div>
             </div>
-            <div class="items">
-                <div class="left-img"><img src="" alt=""></div>
-                <div>fsnkfk</div>
+            <div class="item1">
+                <div class="left-img"><img src="https://i.ibb.co/dcPcvbb/ORB-Brand-Promise-Rewards-img-B-840x473-20210331.webp" alt=""></div>
             </div>
-            <div class="items">
-                <div class="left-img"><img src="" alt=""></div>
-                <div>fsnkfk</div>
+            <div class="item1">
+                <div class="left-img"><img src="https://i.ibb.co/Br43sTL/ORB-Brand-Promise-IGLTA-img-B-840x473-20210330.webp" alt=""></div>
             </div>
         </div>
 
