changing prices and adding rooms to each hotels

--- a/mumbai.html
+++ b/mumbai.html
@@ -322,29 +322,33 @@
     var Mumabai_hotals = [
         {
             name: "Taj Mahal Tower, Mumbai",
-            price: 12,
+            price: 142,
             img: "https://dynamic-media-cdn.tripadvisor.com/media/photo-o/17/4e/e6/b1/photo6jpg.jpg?w=900&h=-1&s=1",
+            // room1 :"Superior Room City View",
+            // room2 :"Deluxe Room City View",
+            // room3:"Superior Room Sea View"
+
 
         },
         {
             name: "Taj Mahal Palace, Mumbai",
-            price: 12,
+            price: 257,
             img: "https://q-xx.bstatic.com/xdata/images/hotel/max1280x900/103703163.jpg?k=5fcab84a62924d761b339b4992a4861451cf063cd1a6c8c5588bf01c8e2ca38c&o=",
 
         },
         {
             name: "Planet Plaza, Mumbai",
-            price: 12,
+            price: 120,
             img: "https://th.bing.com/th/id/OIP.tYv2-wS9BJZWs16rGPQvrwHaE7?w=271&h=181&c=7&r=0&o=5&pid=1.7"
         },
         {
             name: "Hotel Sea Princes, Mumbai",
-            price: 12,
+            price: 180,
             img: "https://th.bing.com/th/id/OIP.9rpxVYymX2kShVumZQlwawHaE8?w=240&h=180&c=7&r=0&o=5&pid=1.7"
         },
         {
             name: "Planet Plaza, Mumbai",
-            price: 12,
+            price: 120,
             img: "https://th.bing.com/th/id/OIP.9rpxVYymX2kShVumZQlwawHaE8?w=240&h=180&c=7&r=0&o=5&pid=1.7",
 
         },
