--- a/reserve.html
+++ b/reserve.html
@@ -13,7 +13,7 @@
             margin: 0px;
             padding: 0px;
         }
-       
+
 
         /* navbar */
 
@@ -72,20 +72,22 @@
 
         }
 
-        #first_cont{
+        #first_cont {
             width: 100%;
             background-color: white;
             height: 600px;
 
         }
-        #first_cont > a{
+
+        #first_cont>a {
             text-decoration: none;
             color: #4FC3F7;
             /* font-size: 20px; */
             display: block;
-            padding: 15px 0.7% 10px 0.7%; 
+            padding: 15px 0.7% 10px 0.7%;
         }
-        #first_cont > a:hover{
+
+        #first_cont>a:hover {
             text-decoration: underline;
         }
 
@@ -99,16 +101,73 @@
             height: 360px;
             gap: 3px;
         }
-        #img_container div:nth-child(1){
-          grid-area: 1/1/3/3;
+
+        #img_container div:nth-child(1) {
+            grid-area: 1/1/3/3;
         }
-        .image_box{
+
+        .image_box {
             border: 1px solid black;
 
         }
-        .image_box img{
+
+        .image_box img {
             width: 100%;
             height: 100%;
+        }
+
+        #info_cont {
+            width: 95%;
+            margin-top: 20px;
+            margin: 20px auto;
+            height: 100px;
+            background-color: turquoise;
+        }
+
+
+
+
+
+        /* footer started */
+        a {
+            text-decoration: none;
+            color: #31b5f3;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        footer {
+            display: flex;
+            width: 100%;
+            height: 300px;
+            padding-bottom: 20px;
+            /* border: 1px solid black; */
+            justify-content: space-between;
+            padding-right: 1%;
+            width: 90%;
+            margin: 40px auto;
+        }
+
+        .footer_item li {
+            list-style: none;
+            margin-top: 10px;
+            font-size: 13px;
+
+        }
+
+        .footer_item>div {
+            font-weight: 600;
+        }
+
+        .text_center {
+            text-align: center;
+        }
+
+        .small_font {
+            font-size: 14px;
+            color: rgb(75, 74, 74);
         }
     </style>
 </head>
@@ -137,6 +196,73 @@
     <div id="main_container">
 
     </div>
+    <footer>
+        <div class="footer_item">
+            <div><img
+                    src="https://a.travel-assets.com/globalcontrols-service/content/f285fb631b0a976202ef57611c7050e9ef5ca51a/images/EG_Wordmark_blue_RGB.svg"
+                    alt=""></div>
+        </div>
+        <div class="footer_item">
+            <div>Company</div>
+            <ul>
+                <li><a href="">About</a></li>
+                <li><a href="">Jobs</a></li>
+                <li><a href="">List your property</a></li>
+                <li><a href="">Partnerships</a></li>
+                <li><a href="">Newsroom</a></li>
+                <li><a href="">Investor Relations</a></li>
+                <li><a href="">Site Map</a></li>
+                <li><a href="">Orbitz Rewards</a></li>
+                <li><a href="">Advertising</a></li>
+            </ul>
+
+        </div>
+        <div class="footer_item">
+            <div>Explore</div>
+            <ul>
+                <li><a href=""> Hotels in United States</a></li>
+                <li><a href=""> Vacation Rentals in United States</a></li>
+                <li><a href=""> Car Rentals in United States</a></li>
+                <li><a href="">Domestic Flights</a></li>
+                <li><a href=""> Vacation Packages in United States</a></li>
+                <li><a href="">Orbitz Reviews</a></li>
+                <li><a href="">Orbitz Coupons</a></li>
+                <li><a href="">LGBTQ Travel</a></li>
+                <li><a href="">Unique Accommodations</a></li>
+                <li><a href="">Travel Blog</a></li>
+            </ul>
+
+        </div>
+
+        <div class="footer_item">
+            <div>Policies</div>
+            <ul>
+                <li><a href=""> Privacy Policy</a></li>
+                <li><a href="">Terms of Use</a></li>
+                <li><a href=""> Orbitz Rewards Terms</a></li>
+                <li><a href=""> Do not sell my personal information</a></li>
+            </ul>
+
+        </div>
+
+        <div class="footer_item">
+            <div>Help</div>
+            <ul>
+                <li><a href=""> Support</a></li>
+                <li><a href="">Cancel your hotel or vacation rental <br> booking</a></li>
+                <li><a href="">Cancel your flight</a></li>
+                <li><a href=""> Refund timelines, policies & processes</a></li>
+                <li><a href="">Use an Orbitz Coupon</a></li>
+            </ul>
+        </div>
+
+    </footer>
+    <p class="text_center top_margin small_font">© 2021 Orbitz, LLC, an Expedia Group Company. All rights reserved.
+    </p>
+    <p class="text_center small_font">Orbitz, Orbitz.com, and the Orbitz logo are trademarks or registered
+        trademarks of Orbitz, LLC. CST# 2083930-50.</p>
+
+    <!-- end of main body  -->
 </body>
 
 </html>
@@ -154,7 +280,7 @@
         "https://q-xx.bstatic.com/xdata/images/hotel/max1280x900/18178036.jpg?k=b7b74bc0dbd3149f920b8253dd084ed4bf0cafdc60f937005c7aee657cba07f0&o=",
         "https://q-xx.bstatic.com/xdata/images/hotel/max1280x900/18181072.jpg?k=7c70d8c51210844612f431d600a4fa54b2c19f37ada4d4d67ba688327caea74e&o="
     ]
-   
+
 
     let see_all_properties = document.createElement("a")
 
@@ -169,7 +295,7 @@
     img_container.setAttribute("id", "img_container")
 
 
-//    here el refers to each image source
+    //    here el refers to each image source
     room_images.forEach(function (el) {
         var image_box = document.createElement("div");
 
@@ -202,16 +328,26 @@
 
     // main_container.append(see_all_properties)
     // main_container.append(img_container)
-   
+
     // main_container.append(img)
 
     let hotel_name = document.createElement("h1");
 
     hotel_name.textContent = reserved_hotel.name;
 
+    // here info_cont refers to the information related to hotel
+
     let info_cont = document.createElement("div");
 
     info_cont.setAttribute("id", "info_cont")
+
+    var stars = document.createElement("p");
+
+    
+
+    info_cont.append(hotel_name)
+
+    first_cont.append(info_cont)
 
 
 
