payment page created

--- a/home_page.html
+++ b/home_page.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="C:\Users\hp\Documents\html2\avi's project\ORBITZ_clone\home_page.css">
+    <script src="https://kit.fontawesome.com/ec66b54285.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -37,6 +38,8 @@
         <div id="search_container">
             <div id="plans_box">
                 <div class="plans">
+                    <i class="fa fa-plane" aria-hidden="true"></i>
+
                     <button id="stays">stays</button>
                 </div>
                 <div class="plans">
