--- a/signin.html
+++ b/signin.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
     <style>
         * {
             box-sizing: border-box;
             margin: 0px;
             padding: 0px;
+            font-family: 'Ubuntu', sans-serif;
+            font-weight: 600;
 
         }
 
@@ -126,7 +131,7 @@
                 }
 
                 else if (email !== user.email || password !== user.password) {
-                    alert("Wrong Email or Password")
+                    alert("User Not found")
                 }
 
 
