--- a/reserve.html
+++ b/reserve.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/ec66b54285.js" crossorigin="anonymous"></script>
 
     <style>
         * {
@@ -68,24 +69,23 @@
             width: 90%;
             margin: auto;
             border: 1px solid black;
-            height: 600px;
+            height: 4000px;
 
         }
 
         #first_cont {
             width: 100%;
             background-color: white;
-            height: 600px;
+            height: 850px;
 
         }
 
-        #first_cont>a {
-            text-decoration: none;
-            color: #4FC3F7;
-            /* font-size: 20px; */
-            display: block;
+        #first_cont #see_all_properties {
+
             padding: 15px 0.7% 10px 0.7%;
         }
+
+
 
         #first_cont>a:hover {
             text-decoration: underline;
@@ -118,13 +118,77 @@
 
         #info_cont {
             width: 95%;
-            margin-top: 20px;
+
             margin: 20px auto;
-            height: 100px;
-            background-color: turquoise;
+            /* height: 100px; */
+
+
+
         }
 
+        #all_facilities {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(3, 130px);
+        }
 
+        .hotel_name {
+            grid-area: 1/1/1/3;
+
+        }
+
+        .map {
+            grid-area: 1/3/4/4;
+        }
+
+        .facility_items {
+            border: 1px solid black;
+
+        }
+
+        .fa {
+
+            color: #555555;
+
+        }
+
+        .top_margin {
+            margin-top: 20px;
+        }
+
+        .margin_btwn {
+            margin: 5px 0px 5px 0px;
+        }
+
+        /* rooms container started */
+
+        .rooms_container {
+            width: 100%;
+            border: 1px solid green;
+            height: 499px;
+            margin-top: 30px;
+        }
+
+        .flex_room_container {
+            width: 100%;
+            height: 300px;
+            border: 3px solid red;
+            margin-top: 40px;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .flex_items {
+            width: 32%;
+            border: 1px solid green;
+            height: 100%;
+            background-color: white;
+        }
+
+        .flex_items img {
+            width: 100%;
+            height: 200px;
+        }
 
 
 
@@ -194,7 +258,105 @@
     </nav>
 
     <div id="main_container">
+        <div id="first_cont">
+            <div id="see_all_properties">
+                <a href="mumbai.html">See all Properties</a>
+            </div>
+            <div id="img_container">
 
+            </div>
+            <div id="info_cont">
+                <div id="all_facilities">
+                    <div class="facility_items hotel_name">
+                        <h1 id="hotel_nav"></h1>
+                        <div><i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                        <h2 class="top_margin">4.8/5 Exceptional</h2>
+                        <p class="margin_btwn small_font">Guests rated this property 4.9/5 for cleanliness.</p>
+                    </div>
+                    <div class="facility_items map">
+                        <h2>Explore the area</h2>
+                        <p class="small_font">
+                            <i class="fa top_margin fa-map-marker" aria-hidden="true"></i>
+                            Gateway of India
+                        </p>
+                        <p class="small_font">
+                            <i class="fa top_margin fa-map-marker" aria-hidden="true"></i>
+                            Chhatrapati Shivaji Maharaj Museum
+                        </p>
+                        <p class="small_font">
+                            <i class="fa top_margin fa-map-marker" aria-hidden="true"></i>
+                            Bombay Castle
+                        </p>
+                        <p class="small_font">
+                            <i class="fa top_margin fa-plane" aria-hidden="true"></i>
+                            Mumbai (BOM-Chhatrapati Shivaji Intl.)
+                        </p>
+                    </div>
+                    <div class="facility_items">
+                        <h2>Popular amenities</h2>
+                        <p class="small_font margin_btwn"> <i class="fa fa-wifi" aria-hidden="true"></i>
+                            Free WiFi
+                        </p>
+                        <p class="top_margin small_font">
+                            <i class="fa fa-snowflake-o" aria-hidden="true"></i>
+                            Air conditioning
+                        </p>
+                    </div>
+                    <div class="facility_items">
+
+                        <p class="top_margin small_font">
+                            Spa
+                        </p>
+                        <p class="top_margin small_font">
+                            Parking included
+                        </p>
+                        <p class="top_margin small_font">
+                            Laundry
+                        </p>
+                    </div>
+                    <div class="facility_items">
+                        <h2>
+                            Cleaning and safety practices
+                        </h2>
+                        <p class="top_margin small_font">
+                            Cleaned with disinfectant
+                        </p>
+                        <p class="top_margin small_font">
+                            72-hour vacancy between guest room stays
+                        </p>
+                    </div>
+                    <div class="facility_items">
+                        <p class="top_margin small_font">
+                            Hand sanitizer provided
+                        </p>
+                        <p class="top_margin small_font">
+                            Personal protective equipment
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="rooms_container">
+            <h1>Choose your room</h1>
+
+            <div class="flex_room_container">
+                <div class="flex_items">
+
+                </div>
+                <div class="flex_items">
+
+                </div>
+                <div class="flex_items">
+
+                </div>
+            </div>
+        </div>
     </div>
     <footer>
         <div class="footer_item">
@@ -271,7 +433,7 @@
 
     JSON.parse(localStorage.getItem("reserve_mumbai"))
     var reserved_hotel = (JSON.parse(localStorage.getItem("reserve_mumbai")));
-   
+
 
 
     let room_images = [
@@ -282,20 +444,14 @@
         "https://q-xx.bstatic.com/xdata/images/hotel/max1280x900/18181072.jpg?k=7c70d8c51210844612f431d600a4fa54b2c19f37ada4d4d67ba688327caea74e&o="
     ]
 
-    console.log(reserved_hotel.room1_price);
 
 
-    let see_all_properties = document.createElement("a")
-
-    see_all_properties.textContent = "See all Properties";
-
-    see_all_properties.setAttribute("href", "mumbai.html")
 
     let main_container = document.getElementById("main_container");
 
-    let img_container = document.createElement("div");
+    let img_container = document.getElementById("img_container")
 
-    img_container.setAttribute("id", "img_container")
+
 
 
     //    here el refers to each image source
@@ -314,43 +470,85 @@
 
     })
 
+    function show_prices() {
+        let rooms_prices = document.querySelectorAll(".flex_items");
+        i = 0;
+        j = 1;
+        rooms_prices.forEach(function (el) {
+            let img = document.createElement("img");
+            img.src = reserved_hotel.rooms[i].img;
+
+            let name = document.createElement("h3");
+            name.textContent = reserved_hotel.rooms[i].room;
+            let p = document.createElement("h1");
+            p.setAttribute("class", "price")
+            p.textContent = "$" + reserved_hotel.rooms[i].price;
+            let final_price = reserved_hotel.rooms[i].price;
 
 
-    // var img = document.createElement("img");
+            let reserve = document.createElement("button")
+            reserve.textContent = "Reserve"
+            reserve.setAttribute("id", "reserve_btn")
+            reserve.onclick = function () {
+                payment(img.src,reserved_hotel.name, name.textContent, final_price)
+            }
 
-    // img.style.width = "45%";
 
-    // img.src = reserved_hotel.img;
-    let first_cont = document.createElement("div");
-    first_cont.setAttribute("id", "first_cont");
+            el.append(img)
+            el.append(name)
+            el.append(p)
+            el.append(reserve)
+            i++;
+            j++
+        })
 
-    first_cont.append(see_all_properties)
-    first_cont.append(img_container)
+    }
 
-    main_container.append(first_cont)
+    show_prices();
 
-    // main_container.append(see_all_properties)
-    // main_container.append(img_container)
+    if (localStorage.getItem("reserved rooms") == null) {
+        localStorage.setItem("reserved rooms", JSON.stringify([]))
+    }
 
-    // main_container.append(img)
 
-    let hotel_name = document.createElement("h1");
+    function payment(img, HN, name, final_price) {
+        let reserved_room = {
+            img,
+            HN,
+            name,
+            final_price
+        }
+      let arr = JSON.parse(localStorage.getItem("reserved rooms"))
+      arr.push(reserved_room)
 
-    hotel_name.textContent = reserved_hotel.name;
+      localStorage.setItem("reserved rooms", JSON.stringify(arr))
+      console.log(arr);
+     
+
+    }
+    console.log(reserved_hotel);
+
+
+
+
+
+
+
+
 
     // here info_cont refers to the information related to hotel
 
-    let info_cont = document.createElement("div");
+    let info_cont = document.getElementById("info_cont")
 
-    info_cont.setAttribute("id", "info_cont")
 
-    var stars = document.createElement("p");
+    let hotel_name = document.getElementById("hotel_nav");
 
-    
+    hotel_name.textContent = reserved_hotel.name
 
-    info_cont.append(hotel_name)
 
-    first_cont.append(info_cont)
+
+
+
 
 
 
