--- a/signin.html
+++ b/signin.html
@@ -74,6 +74,7 @@
             border: none;
             margin-top: 20px;
             font-weight: 600;
+            cursor: pointer;
         }
 
         .small_font {
@@ -109,37 +110,11 @@
     </div>
 
 
-    <script>
-        function signin(e) {
-            e.preventDefault();
-            let myform = document.getElementById("myform");
-
-            let email = myform.email.value;
-
-            let password = myform.password.value;
-            console.log(email, password);
-
-            let all_users = JSON.parse(localStorage.getItem("users"))
-
-            all_users.forEach(function (user) {
-                if (email === user.email && password === user.password) {
-                    alert("loged in succesfully")
-                    window.location.href = "home_page.html"
-
-                } else if (email.length == 0 || password.length == 0) {
-                    alert("Enter yor email and Password")
-                }
-
-                else if (email !== user.email || password !== user.password) {
-                    alert("User Not found")
-                }
-
-
-            })
-        }
-    </script>
+  
 
 
 </body>
 
 </html>
+
+<script src="signin.js"></script>
